--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                         <a class="nav-list-link link" href="./index.html">Студия</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="./portfolio.html">Портфолио</a>
+                        <a class="nav-list-link link current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="nav-list-link link" href="#">Контакты</a>
@@ -65,7 +65,13 @@
                 <ul class="portfolio-list list">
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-1.jpg" alt="Лептоп">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-1.jpg" alt="Лептоп">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Технокряк</h2>
                                 <p class="portfolio-list-text">Веб-сайт</p>
