--- a/portfolio.html
+++ b/portfolio.html
@@ -80,16 +80,28 @@
                     </li>
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-2.jpg" alt="Баскетбольный постер">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-2.jpg" alt="Баскетбольный постер">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="portfolio-list-text">Дизайн</p>
                             </div>                            
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
+                    <li class="portfolio-list-item">                       
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-3.jpg" alt="Логотип ресторана">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-3.jpg" alt="Логотип ресторана">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Ресторан Seafood</h2>
                                 <p class="portfolio-list-text">Приложение</p>
@@ -98,7 +110,13 @@
                     </li>
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-4.jpg" alt="Наушники">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-4.jpg" alt="Наушники">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Проект Prime</h2>
                                 <p class="portfolio-list-text">Маркетинг</p>
@@ -107,7 +125,13 @@
                     </li>
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-5.jpg" alt="Коробки">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-5.jpg" alt="Коробки">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Проект Boxes</h2>
                                 <p class="portfolio-list-text">Приложение</p>
@@ -116,7 +140,13 @@
                     </li>
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-6.jpg" alt="Монитор">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-6.jpg" alt="Монитор">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
                                 <p class="portfolio-list-text">Веб-сайт</p>
@@ -125,7 +155,13 @@
                     </li>
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-7.jpg" alt="Книга">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-7.jpg" alt="Книга">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Издание Limited Edition</h2>
                                 <p class="portfolio-list-text">Дизайн</p>
@@ -134,7 +170,13 @@
                     </li>
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-8.jpg" alt="Этикетка">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-8.jpg" alt="Этикетка">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Проект LAB</h2>
                                 <p class="portfolio-list-text">Маркетинг</p>
@@ -143,7 +185,13 @@
                     </li>
                     <li class="portfolio-list-item">
                         <a class="portfolio-list-link link" href="#">
-                            <img src="./images/portfolio/portfolio-img-9.jpg" alt="Работа за лептопом">
+                            <div class="portfolio-list-img-wrapper">
+                                <img src="./images/portfolio/portfolio-img-9.jpg" alt="Работа за лептопом">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>                            
                             <div class="portfolio-list-wrapper">
                                 <h2 class="portfolio-list-title">Growing Business</h2>
                                 <p class="portfolio-list-text">Приложение</p>
